applications/Kuberetes/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
  namespace: training-app-frontend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: oussachour/qr_frontend
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: training-app-frontend-prod
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
