applications/Kuberetes/python.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  labels:
    app: python
  namespace: training-app-backend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: python
        image: oussachour/qr_python_code
        ports:
        - containerPort: 8420
---

apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 8420
      targetPort: 8420
